@@ -4,6 +4,8 @@
   Src\Common: OptionsMgr.cpp OptionsMgr.h
   Src: FileTransform.cpp MainFrm.cpp MainFrm.h SyntaxColors.cpp
    SyntaxColors.h codepage.h
+ PATCH: [ 1392650 ] Fix locals of CDiffWrapper::RunFileDiff
+  Src: DiffWrapper.cpp DiffWrapper.h MergeDoc.cpp PatchTool.cpp
 
 2005-12-28 Perry
  PATCH: [ 1391732 ] Do not offer to unify codepages in UNICODE build
